# Curator

./: .env.example  .gitignore  README.md  TESTING.md  app.py  dev_server.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  main_crgolden-curator.yml
db/: run_migrations.py
db/migrations/: 0001_initial.sql  0002_psn_data_preferences.sql  0003_account_action_log.sql  0004_user_enrichment_keys.sql  0005_user_profiles.sql  0006_follows.sql  0007_seed_curation_rules.sql
src/curator/: __init__.py  _windows_event_loop.py  app.py  catalog_routes.py  collections_routes.py  consoles_routes.py  deps.py  devices_routes.py  enrichment_keys_routes.py  enrichment_routes.py  identity_routes.py  library_routes.py  link_service.py  me_routes.py  preferences_routes.py  presence_routes.py  profile_routes.py  psn_routes.py  redis_client.py  reverify.py  settings.py  telemetry.py  token_validation.py  trophy_routes.py
src/curator/audit/: __init__.py  repository.py
src/curator/catalog/: __init__.py  canonicalization_service.py  exclusion_rules.py  franchise_assigner.py  merge_service.py  repository.py
src/curator/collections/: __init__.py  capacity_fill_strategy.py  collection_orchestrator.py  collection_spec.py  filter_list_strategy.py  game_candidate.py  repository.py
src/curator/enrichment/: __init__.py  enrichment_service.py  genre_reconciliation_service.py  opencritic_client.py  opencritic_matcher.py  publisher_tier.py  rawg_client.py  rawg_matcher.py  repository.py
src/curator/jobs/: __init__.py  error_messages.py  queue_consumer.py  queue_publisher.py  repository.py
src/curator/persistence/: __init__.py  config.py  connection.py  crypto.py  db_token_store.py  enrichment_keys_repository.py  follow_repository.py  profile_repository.py  repository.py
src/curator/psn/: __init__.py  _graphql.py  _identity.py  account_client.py  catalog_client.py  chat_client.py  errors.py  library_client.py  models.py  mutation_service.py  npsso.py  presence_client.py  rate_limiter.py  repository.py  safety.py  session.py  social_client.py  trophy_cache.py  trophy_client.py  trophy_service.py
src/curator/scoring/: __init__.py  genre_service.py  scoring_service.py  size_estimation_service.py
tests/: test_authz.py  test_catalog_canonicalization_service.py  test_catalog_exclusion_rules.py  test_catalog_franchise_assigner.py  test_catalog_merge_service.py  test_catalog_repository.py  test_catalog_routes.py  test_collections_capacity_fill_strategy.py  test_collections_filter_list_strategy.py  test_collections_orchestrator.py  test_collections_repository.py  test_collections_routes.py  test_config.py  test_connection.py  test_consoles_routes.py  test_crypto.py  test_db_token_store.py  test_deps.py  test_devices_routes.py  test_enrichment_genre_reconciliation_service.py  test_enrichment_keys_repository.py  test_enrichment_keys_routes.py  test_enrichment_opencritic_client.py  test_enrichment_opencritic_matcher.py  test_enrichment_publisher_tier.py  test_enrichment_rawg_client.py  test_enrichment_rawg_matcher.py  test_enrichment_repository.py  test_enrichment_routes.py  test_enrichment_run_handler.py  test_enrichment_service.py  test_identity_routes.py  test_jobs_error_messages.py  test_jobs_queue_consumer.py  test_jobs_queue_publisher.py  test_jobs_repository.py  test_library_build_orchestrator.py  test_library_ingestion_service.py  test_library_repository.py  test_library_routes.py  (+32 more)
