[project]
name = "curator"
version = "0.1.0"
description = "A multi-user PlayStation library curator API."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "crgolden" }]
keywords = ["PSN", "PlayStation", "curator", "FastAPI"]
dependencies = [
    "fastapi",
    "uvicorn",
    "authlib",
    "cryptography",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "psnpy @ https://github.com/crgolden/psnpy/releases/download/v0.2.0/psnpy-0.2.0-py3-none-any.whl",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
