[project]
name = "curator"
version = "0.1.0"
description = "A multi-user PlayStation library curator API."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "crgolden" }]
keywords = ["PSN", "PlayStation", "curator", "FastAPI"]
dependencies = [
    "fastapi",
    "uvicorn",
    "joserfc",
    "cryptography",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "psycopg-pool>=3.2.0,<4.0.0",
    "httpx>=0.27.0",
    "redis>=8.0.1,<9.0.0",
    "azure-servicebus>=7.12.0,<8.0.0",
    "azure-identity>=1.19.0,<2.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pycountry>=26.2.16",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.44.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.65b0",
    "opentelemetry-instrumentation-psycopg>=0.65b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "elasticsearch>=9.0.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.22",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "PT"]
# B008 (function call in a default argument) is a real anti-pattern in general, but FastAPI's dependency
# injection is *built* on `Depends(...)` as a parameter default (see `curator.deps.require_verified_caller`,
# `curator.me_routes.me`, `curator.psn_routes.psn_link`/`psn_unlink`) -- there is no alternative spelling
# that keeps the DI working, and FastAPI's own docs use this exact shape. Ignored repo-wide rather than
# per-line `# noqa` clutter on every route handler.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["curator"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
# Tests intentionally use bare, unannotated fake-collaborator classes (FakeRepository, FakeConnection, ...)
# that satisfy the real collaborators' methods structurally (duck typing) rather than nominally -- matching
# this repo's no-unittest.mock fake style (see TESTING.md). Full strict-everywhere would force either
# fully-typed Protocols for every fake or scattered casts with no runtime benefit on throwaway test doubles.
# `tests/` has no `__init__.py`, so mypy names each test file's module after its bare filename
# (`test_config`, not `tests.test_config`) -- the glob below matches on that. src/ remains fully strict.
module = [
    "test_authz",
    "test_catalog_canonicalization_service",
    "test_catalog_exclusion_rules",
    "test_catalog_franchise_assigner",
    "test_catalog_merge_service",
    "test_catalog_repository",
    "test_catalog_routes",
    "test_collections_capacity_fill_strategy",
    "test_collections_filter_list_strategy",
    "test_collections_orchestrator",
    "test_collections_repository",
    "test_collections_routes",
    "test_consoles_routes",
    "test_deps",
    "test_devices_routes",
    "test_enrichment_genre_reconciliation_service",
    "test_enrichment_keys_repository",
    "test_enrichment_keys_routes",
    "test_enrichment_opencritic_client",
    "test_enrichment_opencritic_matcher",
    "test_enrichment_publisher_tier",
    "test_enrichment_rawg_client",
    "test_enrichment_rawg_matcher",
    "test_enrichment_repository",
    "test_enrichment_routes",
    "test_enrichment_run_handler",
    "test_enrichment_service",
    "test_config",
    "test_connection",
    "test_crypto",
    "test_db_token_store",
    "test_library_build_orchestrator",
    "test_library_ingestion_service",
    "test_library_repository",
    "test_library_routes",
    "test_jobs_error_messages",
    "test_jobs_queue_consumer",
    "test_jobs_queue_publisher",
    "test_jobs_repository",
    "test_identity_routes",
    "test_link_service",
    "test_preferences_routes",
    "test_presence_routes",
    "test_profile_persistence",
    "test_profile_routes",
    "test_psn_account_client",
    "test_psn_catalog_client",
    "test_psn_chat_client",
    "test_psn_library_client",
    "test_psn_mutation_service",
    "test_psn_npsso",
    "test_psn_presence_client",
    "test_psn_rate_limiter",
    "test_psn_repository",
    "test_redis_client",
    "test_trophy_routes",
    "test_psn_safety",
    "test_psn_session",
    "test_psn_social_client",
    "test_psn_trophy_cache",
    "test_psn_trophy_client",
    "test_psn_trophy_service",
    "test_repository",
    "test_reverify",
    "test_scoring_genre_service",
    "test_scoring_scoring_service",
    "test_scoring_size_estimation_service",
    "test_routes",
    "test_schema",
    "test_settings",
    "test_telemetry",
    "test_token_validation",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disable_error_code = ["arg-type", "type-arg"]
